# P7-kode

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  mwe.cpp  orchestrator.sh  routing_test.xml  run.sh  station_scheduling.xml  waypoint_scheduling.xml
.travis/: build.sh  format.sh
broadcaster/: CMakeLists.txt
broadcaster/include/: broadcaster.hpp
broadcaster/include/broadcaster/: broadcaster.hpp
broadcaster/src/: broadcaster.cpp  main.cpp
communication/: CMakeLists.txt
communication/include/communication/: com-module.hpp  info.hpp
communication/src/: com-module.cpp  info.cpp  main.cpp
config/: CMakeLists.txt
config/include/config/: config.hpp  config_wrapper.hpp
config/src/: config.cpp  config_wrapper.cpp
databehandling/: bars.tex  data.py
databehandling/Old Intelligent 1340 /: order_log__Mon Dec  9 11_43_26 2019_robot-2  order_log__Mon Dec  9 11_44_32 2019_robot_4  order_log__Mon Dec  9 11_44_33 2019 Robert 3  order_log__Mon Dec  9 11_44_35 2019_robot_5
databehandling/data/Test1345 - Overvej discard pga. realtidsfejl/: order_log__Mon Dec  9 14_10_51 2019 Robert 3  order_log__Mon Dec  9 14_11_34 2019_robot_5  order_log__Mon Dec  9 14_11_37 2019_robot_4  order_log__Mon Dec  9 14_13_21 2019_robot-1  order_log__Mon Dec  9 14_13_24 2019_robot-2
include/util/: meta.hpp
json/include/json/: json.hpp
lib/: CMakeLists.txt
lib/catch/: catch.hpp
order/: CMakeLists.txt
order/include/order/: generation_service.hpp  generator.hpp  order.hpp  random_generator.hpp
order/src/: generation_service.cpp  main.cpp  order.cpp  order_generation_service.cpp  random_generator.cpp
order_generation/: CMakeLists.txt
order_generation/include/order_generation/: order.hpp  order_generator.hpp  pick_random.hpp
order_generation/src/: order_generator.cpp  pick_random.cpp
point_cloud_visualisor/: point_cloud_visualisor.py
port_discovery/: CMakeLists.txt
port_discovery/include/port_discovery/: port_service.hpp
port_discovery/src/: main.cpp  port_service.cpp
robot/: CMakeLists.txt  config.cpp  config.hpp  config_wrapper.cpp  config_wrapper.h  config_wrapper.hpp  eta.cpp  eta.hpp  info.cpp  location.cpp  location.hpp  master.cpp  master.hpp  robot.cpp  robot.hpp
robot/include/robot/: clock.hpp  config.hpp  config_wrapper.h  config_wrapper.hpp  info.hpp  master.hpp  options.hpp  orchestrator.hpp  subscriber.hpp
robot/src/: 0  clock.cpp  config.cpp  config_wrapper.cpp  info.cpp  main.cpp  master.cpp  orchestrator.cpp  subscriber.cpp
robot_master/: controller_client.cpp  controller_client.hpp
scheduling/: .gitignore  CMakeLists.txt  get_eta.q  greedy_get_eta.q  greedy_station_scheduling.q  greedy_station_scheduling.xml  greedy_waypoint_scheduling.q  greedy_waypoint_scheduling.xml  station_scheduling.q  station_scheduling.xml  station_timing.q  waypoint_scheduling.q  waypoint_scheduling.xml
scheduling/include/: 0  eta_extractor.hpp  scheduler.hpp  scheduling.hpp  station_scheduler.hpp  uppaal_executor.hpp  uppaal_simulation_parser.hpp  waypoint_scheduler.hpp
scheduling/src/: eta_extractor.cpp  main.cpp  station_scheduler.cpp  timing.cpp  uppaal_executor.cpp  uppaal_simulation_parser.cpp  waypoint_scheduler.cpp
src/: main.cpp
tcp/: .gitignore  CMakeLists.txt  PortService.cpp  PortService.hpp  broadcaster.cpp  broadcaster.hpp  client.cpp  client.hpp  close_exception.hpp  portService.cpp  portService.hpp  port_discovery_service.cpp  port_discovery_service.hpp  port_service.cpp  port_service.hpp  receive.cpp  receive.hpp  receive_exception.hpp  send.cpp  send.hpp  send_exception.hpp  server.cpp  server.hpp  tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp  uppaal_client.c  uppaal_client.h
tcp/exceptions/: exceptions.hpp
tcp/include/: client.hpp  connection.hpp  port_service.hpp  server.hpp  tcp_exception.hpp
tcp/include/tcp/: client.hpp  connection.hpp  exception.hpp  server.hpp
tcp/src/: CMakeLists.txt  auto_responder.cpp  client.cpp  connection.cpp  main.cpp  port_service.cpp  server.cpp
tcp/utility/: split.cpp  split.hpp
tests/: CMakeLists.txt
tests/src/: geotests.cpp  main.cpp
unit_test/: CMakeLists.txt
util/: CMakeLists.txt
util/include/: trace.def
util/include/spdlog/: tweakme.h
util/include/util/: euclid.hpp  file_lock.hpp  json.hpp  log.hpp  logger.hpp  meta.hpp  pick_random.hpp  pollable.hpp  split.hpp
util/src/: file_lock.cpp  logger.cpp
validator/: CMakeLists.txt  train-gate-stat.xml
validator/src/: foo.cpp  main.cpp
waypoint_scheduling/: CMakeLists.txt  waypoint_scheduling.xml
waypoint_scheduling/include/: waypoint_scheduler.hpp
waypoint_scheduling/src/: waypoint_scheduler.cpp
wbt-translator/: .gitignore  CMakeLists.txt  apsp.cpp  apsp.hpp  distance_matrix.cpp  distance_matrix.hpp  query_template_writer.cpp  query_template_writer.hpp  testmap.wbt  uppaal-printer.cpp  uppaal-printer.hpp  wbt-translator.cpp  webots_parser.cpp  webots_parser.hpp  xml-generator.cpp  xml-generator.hpp
wbt-translator/include/wbt-translator/: apsp.hpp  distance_matrix.hpp  query_template_writer.hpp  uppaal-printer.hpp  webots_parser.hpp
wbt-translator/src/: apsp.cpp  distance_matrix.cpp  query_template_writer.cpp  tikz-dumper.cpp  uppaal-printer.cpp  wbt-translator.cpp  webots_parser.cpp
wbt-translator/templates/: get_eta.q.template  station_scheduling.q  station_scheduling.xml.template  waypoint_scheduling.q.template  waypoint_scheduling.xml.template  waypoint_timing.q.template
webot/: .gitignore  Elisa3.wbo
webot/controllers/Wall_clock/: Makefile  Wall_clock  Wall_clock.cpp
webot/controllers/waypoints_runner/: Makefile  controller_server.cpp  controller_server.hpp  lidar.hpp  lidar_wrapper.cpp  lidar_wrapper.hpp  make-with-env  points.cpp  points.hpp  robot.cpp  robot.hpp  tcp.cpp  tcp.hpp  (+4 more)
webot/protos/: .Endpoint.cache  .IdTest.cache  .Station.cache  .Waypoint.cache  Elisa3.proto  Endpoint.proto  Solid.wbo  Station.proto  Waypoint.proto
webot/worlds/: .testmap.wbproj  testmap.wbt  testmap_1.wbt  testmap_2.wbt  testmap_3.wbt  testmap_test.wbt  testmap_v2.wbt
(+156 files in other folders)
